refactor: Constructor Manual ao invés do uso do Lombok